docs: keep only essentials in README, archive details in local DETAILS.md